--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "install": "^0.13.0",
     "npm": "^7.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
