--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
