--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "validator": "^13.6.0",
+    "weather-icons": "^1.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
